# scrypt

./: .gitignore  .travis.yml  AGENTS.md  BSDmakefile  BUILDING  COPYRIGHT  FORMAT  FORMAT.md  Makefile  Makefile.am  README.md  STYLE  acscrypt.m4  config_freebsd.h  configure.ac  get-version.sh  main.c  memlimit.c  scrypt-nosse.c  scrypt-ref.c  scrypt-sse.c  scrypt-version  scrypt.1  scrypt_cpuperf.c  scrypt_mode.c  scrypt_mode.h  scryptenc.c  scryptenc.h  warn.h
.github/workflows/: compile.yml  coverity-scan.yml
autocrap/: Makefile.am  configure.ac
lib-platform/crypto/: crypto_scrypt.c
lib-platform/util/: memlimit.c
lib/crypto/: crypto_scrypt-nosse.c  crypto_scrypt-ref.c  crypto_scrypt-sse.c  crypto_scrypt.c  crypto_scrypt_internal.h  crypto_scrypt_smix.c  crypto_scrypt_smix_sse2.c  sha256.h
lib/scryptenc/: scryptenc.c  scryptenc.h  scryptenc_cpuperf.c  scryptenc_errno.h  scryptenc_print_error.c  scryptenc_print_error.h
lib/util/: memlimit.c  passphrase_entry.c  passphrase_entry.h  warn.c
libcperciva/alg/: sha256.c  sha256.h  sha256_shani.c  sha256_shani.h
libcperciva/cpusupport/: cpusupport.h  cpusupport_x86_shani.c
libcperciva/crypto/: crypto_aes_aesni.c  crypto_sha256_shani.c  crypto_sha256_shani.h
libcperciva/util/: getopt.c  getopt.h  humansize.c  readpass.c  warnp.h
libscrypt-kdf/: scrypt-kdf.h
m4/: check_libcperciva_posix.m4  check_posix_sh.m4  check_solaris_c99.m4
release-tools/: create-sign-tarball.sh  mktarball.sh
tags/1.0/: scrypt-ref.c  scrypt.h
tags/1.1/: FORMAT  Makefile
tags/1.1.1/: Makefile.am  acscrypt.m4  config_freebsd.h  crypto_aesctr.h  scryptenc.c  sysendian.h
tags/1.1.2/: config_freebsd.h
tags/1.1.3/: Makefile  Makefile.am  main.c  memlimit.c
tags/1.1.4/: Makefile  main.c
tags/1.1.4/lib/crypto/: crypto_scrypt-nosse.c
tags/1.1.4/lib/scryptenc/: scryptenc.c
tags/1.1.4/lib/util/: readpass.c
tags/1.1.5/: scrypt.1
tags/1.1.6/: configure.ac
tags/1.1.6/lib/crypto/: crypto_scrypt-sse.c
test/: Makefile  Makefile.am  main.c  test_scrypt.c  test_scrypt.sh
tests/: .gitignore  01-known-values.sh  02-decrypt-reference-file.sh  02-encrypt-file.sh  03-decrypt-file.sh  03-encrypt-decrypt-file.sh  04-decrypt-reference-file.sh  04-force-resources.sh  05-system-scrypt-encrypt-decrypt.sh  06-decrypt-fail.sh  07-passphrase-env.sh  08-passphrase-file.sh  09-explicit-params.sh  10-check-params.sh  shared_test_functions.sh  test_scrypt.c  test_scrypt.sh
tests/check-params/: check-params.c
tests/libscrypt-kdf/: sample-libscrypt-kdf.c
tests/valgrind/: potential-memleaks.c
tests/verify-strings/: test_scrypt.c  test_scrypt_ref_params.c  test_scrypt_small.good
trunk/: Makefile  Makefile.am  config_freebsd.h  configure.ac  crypto_aesctr.c  main.c  memlimit.c  scrypt-nosse.c  scrypt-sse.c  scrypt_cpuperf.c  scryptenc.c
trunk/lib/crypto/: crypto_scrypt-nosse.c  crypto_scrypt-ref.c  crypto_scrypt-sse.c  sha256.c
trunk/lib/scryptenc/: scryptenc.c  scryptenc_cpuperf.c
trunk/lib/util/: memlimit.c  readpass.c
